--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+body {
+  color: var(--white);
+  font-size: 13px;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  background-color: var(--purple50);
+}
+
 :root {
   --purple50: hsl(260, 100%, 95%);
   --purple300: hsl(264, 82%, 80%);
@@ -17,8 +24,20 @@
   --white: hsl(0, 0%, 100%);
 }
 
-.container {
+main {
+  max-width: 1150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
   min-height: 100vh;
+}
+
+h2 {
+  font-weight: 600;
+}
+
+.container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto;
@@ -28,6 +47,7 @@
 .daniel {
   grid-column: 1/3;
   background-color: var(--purple500);
+  padding: 32px;
 }
 
 .jonathan {
@@ -38,15 +58,60 @@
 .kira {
   grid-column: 4/5;
   grid-row: 1/3;
-  background-color: red;
+  background-color: var(--white);
+  color: black;
 }
 
 .jeanette {
   grid-row: 2/3;
-  background-color: blue;
+  background-color: var(--white);
+  color: var(--black);
 }
 
 .patrick {
   grid-column: 2/4;
-  background-color: var(--black);
+  background-color: var(--darkBlue);
+}
+
+.daniel,
+.jonathan,
+.kira,
+.jeanette,
+.patrick {
+  border-radius: 8px;
+  box-shadow: 0 15px 30px rgb(0, 0, 0, 0.15);
+  padding: 32px;
+}
+
+.data {
+  display: flex;
+  align-items: center;
+}
+
+.photo {
+  margin-right: 20px;
+}
+
+.photo img {
+  border-radius: 50%;
+  border: 2px solid var(--white);
+}
+
+.name {
+  font-weight: 600;
+}
+
+.graduate {
+  opacity: 0.5;
+  font-size: 11px;
+}
+.title {
+  margin: 20px 0;
+  line-height: 1.4;
+  font-size: 20px;
+  font-weight: 600;
+}
+.paragraph {
+  line-height: 1.8;
+  opacity: 0.7;
 }
