--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 
 main {
   max-width: 1150px;
+  padding: 40px 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,13 +42,16 @@ h2 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto;
-  gap: 10px;
+  gap: 24px;
 }
 
 .daniel {
   grid-column: 1/3;
   background-color: var(--purple500);
   padding: 32px;
+  background-image: url("./images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: top right 100px;
 }
 
 .jonathan {
@@ -81,6 +85,11 @@ h2 {
   border-radius: 8px;
   box-shadow: 0 15px 30px rgb(0, 0, 0, 0.15);
   padding: 32px;
+}
+
+.daniel .photo img,
+.patrick .photo img {
+  border: 2px solid var(--purple300);
 }
 
 .data {
