--- a/style.css
+++ b/style.css
@@ -124,3 +124,14 @@ h2 {
   line-height: 1.8;
   opacity: 0.7;
 }
+
+@media (max-width: 600px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .daniel {
+    background-image: none;
+  }
+}
